--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 </div>
 
 <!--botoes suoeriores-->
-    <button onclick="window.location.href='https://nakajimaff.github.io/AURAEntertainmentinformaçoes/'">
+    <button onclick="window.location.href='https://nakajimaff.github.io/AURAEntertainmentinforma-oes/'">
         <img src="./informaçoes.png" id="informacoes" width="3%" height="5.5%">
     </button>
 
