--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         <button onclick="window.location.href='https://mail.google.com/mail/u/4/#search/aura.entertainment025%40gmail.com?compose=DmwnWrRlQXzzRqkLFZPtJCZMMDfBXVNFmRbhdMvkNcLgbdQmchpBCHJbFQMsxzPzVCwkJtvdTrFl'">
             <a href="#">Contato</a>
         </button>
-        <button onclick="window.location.href='https://nakajimaff.github.io/AURAEntertainmentPolíticaDePrivacidade/'">
+        <button onclick="window.location.href='https://nakajimaff.github.io/AURAEntertainmentPoliticaDePrivacidade/'">
             <a href="#">Política de Privacidade</a>
         </button>
     </nav>
